--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -407,6 +407,23 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">105 AD</div>
+          <div class="content-right">
+            <h4 class="area">China</h4>
+            <h3>A.D. 105 蔡伦发明造纸术</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">100</span>
+          <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">220 AD</div>
           <div class="content-right">
             <h4 class="area">China</h4>
@@ -735,6 +752,33 @@
 
       <!-- Article -->
       <div class="timeline-article">
+
+        <div class="content-left-container">
+          <div class="century">1066 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1066 诺曼风格兴起</h3>
+          </div>
+          <!-- <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066:%5B%5B%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066%5D%5D">Read more</a></span> -->
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1066 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1066 诺曼征服英格兰</h3>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066:%5B%5B%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066%5D%5D">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">1096 AD</div>
           <div class="content-right">
@@ -767,17 +811,29 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-right-container">
-          <div class="century">1299 AD</div>
-          <div class="content-right">
+        <div class="content-left-container">
+          <div class="century">1170 AD</div>
+          <div class="content-left">
             <h4 class="area">Europe</h4>
-            <h3>A.D. 1299 - 1922 奥斯曼帝国诞生</h3>
+            <h3>A.D. 1170 - 1500 哥特风格兴起</h3>
           </div>
-          <span class="timeline-author">
-            <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire:%5B%5B%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire%5D%5D">Read more</a></span>
+          <!-- <span class="timeline-author">John Doe</span> -->
         </div>
+      </div>
+      <!-- // Article -->
 
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1200 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1200 - 1300 主教堂世纪</h3>
+            <p>欧洲各处新建教堂</p>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
         <div class="meta-date">
           <span class="date">1200</span>
           <span class="month">AD</span>
@@ -787,13 +843,42 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-right-container">
-          <div class="century">1279 AD</div>
-          <div class="content-right">
-            <h4 class="area">China</h4>
-            <h3>A.D. 1279 - 1368 元</h3>
+        <div class="content-left-container">
+          <div class="century">1267 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1267 - 1337 乔托</h3>
+            <p>意大利文艺复兴时期的开创者, 欧洲绘画之父、西方绘画之父</p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1271 AD</div>
+          <div class="content-right">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1271 - 1368 元</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1299 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1299 - 1922 奥斯曼帝国诞生</h3>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire:%5B%5B%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire%5D%5D">Read more</a></span>
         </div>
       </div>
       <!-- // Article -->
@@ -866,9 +951,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-right-container">
+        <div class="content-left-container">
           <div class="century">1400 AD</div>
-          <div class="content-right">
+          <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>1400 - 1600 文艺复兴</h3>
           </div>
@@ -890,6 +975,20 @@
           <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 1405 - 1433 郑和下西洋</h3>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1455 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1455 古登堡印刷版《圣经》出版</h3>
+            <p>加快了知识流通和欧洲人的识字率，推动了文艺复兴。</p>
           </div>
         </div>
       </div>
