--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -237,10 +237,10 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="century">221 BC</div>
+          <div class="century">206 BC</div>
           <div class="content-left">
             <h4 class="area">China</h4>
-            <h3>221 B.C. - 207 B.C. 秦</h3>
+            <h3>206 B.C. 出现指南针用于占卜的纪录</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -299,6 +299,38 @@
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
 
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">25 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 67 佛教传入中国</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">105 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 105 蔡伦发明造纸术</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">100</span>
+          <span class="month">AD</span>
+        </div>
       </div>
       <!-- // Article -->
 
@@ -599,6 +631,48 @@
       </div>
       <!-- // Article -->
 
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1100 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1100 发明火药</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1040 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1040 指南针用于军事导航</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1045 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1045 毕升发明活字印刷术</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
@@ -610,6 +684,22 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism:%5B%5B%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism%5D%5D">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1066 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1066 诺曼征服英格兰</h3>
+            <p>彻底改变了英格兰的文化走向，从此英格兰受到<b>法国</b>的语言、文学、礼仪和美食的等方面的深远影响</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066:%5B%5B%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066%5D%5D">Read more</a></span>
         </div>
       </div>
       <!-- // Article -->
@@ -632,10 +722,10 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="century">1115 AD</div>
+          <div class="century">1111 AD</div>
           <div class="content-left">
             <h4 class="area">China</h4>
-            <h3>A.D. 1115 - 1234 金</h3>
+            <h3>A.D. 1111 指南针用于海上导航</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -645,6 +735,44 @@
         </div>
       </div>
       <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1115 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1115 - 1234 金</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1266 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1266 马可·波罗到达元大都，见到元世祖忽必烈。</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1271 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1271 - 1368 元</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
 
       <!-- Article -->
       <div class="timeline-article">
@@ -771,11 +899,52 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">1455 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1455 古登堡印刷版《圣经》出版</h3>
+            <p>加快了知识流通和欧洲人的识字率，推动了文艺复兴。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1487 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1487 迪亚士发现好望角</h3>
+            <p>发现进入印度洋的航线</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">1492 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1492 哥伦布发现美洲</h3>
           </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1519 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1519 - 1521 麦哲伦环球航行</h3>
+          </div>
+        <div class="meta-date">
+          <span class="date">1500</span>
+          <span class="month">AD</span>
         </div>
       </div>
       <!-- // Article -->
@@ -791,10 +960,6 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%A7%91%E5%AD%A6%E9%9D%A9%E5%91%BD%20Scientific%20revolution:%5B%5B%E7%A7%91%E5%AD%A6%E9%9D%A9%E5%91%BD%20Scientific%20revolution%5D%5D">Read more</a></span>
-        </div>
-        <div class="meta-date">
-          <span class="date">1500</span>
-          <span class="month">AD</span>
         </div>
       </div>
       <!-- // Article -->
@@ -929,6 +1094,21 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%90%AF%E8%92%99%E8%BF%90%E5%8A%A8%20Enlightenment:%5B%5B%E5%90%AF%E8%92%99%E8%BF%90%E5%8A%A8%20Enlightenment%5D%5D">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1804 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1804 拿破仑加冕称为法兰西皇帝</h3>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%8B%BF%E7%A0%B4%E4%BB%91%20Napol%C3%A9on%20Bonaparte:%5B%5B%E6%8B%BF%E7%A0%B4%E4%BB%91%20Napol%C3%A9on%20Bonaparte%5D%5D">Read more</a></span>
         </div>
       </div>
       <!-- // Article -->
