--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -102,7 +102,7 @@
           <div class="content-left">
             <h4 class="area">Africa</h4>
             <h3>2560 B.C. 胡夫金字塔建成</h3>
-            <p class="timeline-author">金字塔时代</p>
+            <p class="timeline-author"><a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E9%87%91%E5%AD%97%E5%A1%94%E6%97%B6%E4%BB%A3:%E9%87%91%E5%AD%97%E5%A1%94%E6%97%B6%E4%BB%A3">金字塔时代</a></p>
           </div>
           <!-- <span class="timeline-author">Africa</span> -->
         </div>
@@ -171,7 +171,7 @@
           <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>800 B.C. 荷马史诗</h3>
-            <p class="timeline-author">希腊 黑暗时代</p>
+            <p class="timeline-author"><a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E9%BB%91%E6%9A%97%E6%97%B6%E4%BB%A3%20Greek%20Dark%20Ages%20c.1200%20BC~c.800%20BC:%5B%5B%E9%BB%91%E6%9A%97%E6%97%B6%E4%BB%A3%20Greek%20Dark%20Ages%20c.1200%20BC~c.800%20BC%5D%5D">希腊 黑暗时代</a></p>
           </div>   
         </div>
         <div class="meta-date">
@@ -205,7 +205,7 @@
           <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>776 B.C. 第一届奥运会</h3>
-            <p class="timeline-author">希腊 古风时代</p>
+            <p class="timeline-author"><a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E5%8F%A4%E9%A3%8E%E6%97%B6%E4%BB%A3%20Archaic%20period%20c.800%20BC~c.600%20BC:%5B%5B%E5%8F%A4%E9%A3%8E%E6%97%B6%E4%BB%A3%20Archaic%20period%20c.800%20BC~c.600%20BC%5D%5D">希腊 古风时代</a></p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -286,7 +286,7 @@
           <div class="content-right">
             <h4 class="area">Europe</h4>
             <h3>331 B.C. - 323 B.C. 亚历山大帝国</h3>
-            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+            <p>亚历山大帝国的奠基对希腊艺术是件了不起的大事，因为希腊艺术原来仅仅在几个小城市内颇有影响，现在得以发展成为几乎半个世界的图画语言了。这种发展必然影响希腊艺术的性质。我们大都不把这后一时期的艺术叫做希腊艺术（Greek art），而把它叫做希腊化艺术（Hellenistic art），因为亚历山大的继承者在东方国土上建立的一些帝国通常就以此为名。</p>
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
@@ -298,6 +298,19 @@
           <span class="month">BC</span>
         </div>
       </div>
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">323 BC</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>323 B.C. - 146 B.C. 希腊话时期</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
       <!-- Article -->
       <div class="timeline-article">
@@ -388,9 +401,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">67 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">China</h4>
             <h3>A.D. 67 佛教传入中国</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
@@ -400,7 +413,23 @@
             <a href="https://www.wikiwand.com/zh-hans/%E4%B8%AD%E5%9C%8B%E4%BD%9B%E6%95%99%E5%8F%B2">Read more</a>
           </span>
         </div>
+      </div>
+      <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">72 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 72 - 82 罗马斗兽场建成</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E7%BD%97%E9%A9%AC%E6%96%97%E5%85%BD%E5%9C%BA%20Colosseum%2072~82:%5B%5B%E7%BD%97%E9%A9%AC%E6%96%97%E5%85%BD%E5%9C%BA%20Colosseum%2072~82%5D%5D">Read more</a>
+          </span>
+        </div>
       </div>
       <!-- // Article -->
 
@@ -959,7 +988,7 @@
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4:%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4">Read more</a></span>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance:%5B%5B%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance%5D%5D">Read more</a></span>
         </div>
         <div class="meta-date">
           <span class="date">1400</span>
