update art history notes

--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -305,9 +305,12 @@
           <div class="century">323 BC</div>
           <div class="content-left">
             <h4 class="area">Europe</h4>
-            <h3>323 B.C. - 146 B.C. 希腊话时期</h3>
+            <h3>323 B.C. - 146 B.C. 希腊化时期</h3>
           </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E5%B8%8C%E8%85%8A%E5%8C%96%E6%97%B6%E6%9C%9F%20Hellenistic%20period%20323%20BC~146%20BC:%5B%5B%E5%B8%8C%E8%85%8A%E5%8C%96%E6%97%B6%E6%9C%9F%20Hellenistic%20period%20323%20BC~146%20BC%5D%5D">Read more</a>
+          </span>
         </div>
       </div>
       <!-- // Article -->
@@ -485,19 +488,21 @@
       </div>
       <!-- // Article -->
 
+
+
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
-          <div class="century">317 AD</div>
+          <div class="century">313 AD</div>
           <div class="content-right">
-            <h4 class="area">China</h4>
-            <h3>A.D. 317 - 420 东晋</h3>
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 313 罗马帝国皇帝君士坦丁大帝信奉基督教</h3>
+            <p>313年颁布《米兰赦令》，宣布罗马帝国境内有信仰基督教的自由，并且发还了已经没收的教会财产，亦承认了基督教的合法地位。米兰敕令是基督教历史上的转折点，标志著罗马帝国的统治者对基督教从镇压和宽容相结合的政策转为保护和利用的政策、从被戴克里先迫害的地下宗教成为被承认的宗教，而基督教也开始了与帝国政府的政教合一。</p>
           </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
-        </div>
-        <div class="meta-date">
-          <span class="date">400</span>
-          <span class="month">AD</span>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E5%A4%A7%E5%B8%9D%2F%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E4%B8%80%E4%B8%96%20Constantine%20the%20Great:%5B%5B%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E5%A4%A7%E5%B8%9D%2F%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E4%B8%80%E4%B8%96%20Constantine%20the%20Great%5D%5D">Read more</a>
+          </span>
         </div>
         <div class="meta-date">
           <span class="date">300</span>
@@ -516,7 +521,35 @@
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
+      </div>
+      <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">380 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 380 基督教确立为罗马帝国国教</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">380 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 380 基督教建立了自己的教堂形式——巴西利卡</h3>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E5%B7%B4%E8%A5%BF%E5%88%A9%E5%8D%A1%20basilicas:%5B%5B%E5%B7%B4%E8%A5%BF%E5%88%A9%E5%8D%A1%20basilicas%5D%5D">Read more</a>
+          </span>
+        </div>
       </div>
       <!-- // Article -->
 
@@ -774,7 +807,8 @@
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism:%5B%5B%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism%5D%5D">Read more</a></span>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism:%5B%5B%E5%9F%BA%E7%9D%A3%E6%95%99%E5%A4%A7%E5%88%86%E8%A3%82%20East-West%20Schism%5D%5D">Read more</a>
+          </span>
         </div>
       </div>
       <!-- // Article -->
@@ -784,13 +818,13 @@
 
         <div class="content-left-container">
           <div class="century">1066 AD</div>
-          <div class="content-right">
+          <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1066 诺曼风格兴起</h3>
           </div>
-          <!-- <span class="timeline-author">
+          <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066:%5B%5B%E8%AF%BA%E6%9B%BC%E5%BE%81%E6%9C%8D%E8%8B%B1%E6%A0%BC%E5%85%B0%201066%5D%5D">Read more</a></span> -->
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E8%AF%BA%E6%9B%BC%E9%A3%8E%E6%A0%BC%E5%85%B4%E8%B5%B7%201066:%5B%5B%E8%AF%BA%E6%9B%BC%E9%A3%8E%E6%A0%BC%E5%85%B4%E8%B5%B7%201066%5D%5D">Read more</a></span>
         </div>
 
         <div class="content-right-container">
@@ -877,9 +911,11 @@
           <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1267 - 1337 乔托</h3>
-            <p>意大利文艺复兴时期的开创者, 欧洲绘画之父、西方绘画之父</p>
+            <p>意大利文艺复兴时期的开创者, 欧洲绘画之父、西方绘画之父。被认为是第一个企图画出有透视感和深度空间的画家。</p>
           </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E4%B9%94%E6%89%98%20Giotto%20c.%201267%E2%80%931337:%5B%5B%E4%B9%94%E6%89%98%20Giotto%20c.%201267%E2%80%931337%5D%5D">Read more</a></span>
         </div>
       </div>
       <!-- // Article -->
@@ -960,6 +996,22 @@
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
 
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1377 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1377 - 1446 菲利波·布鲁内莱斯基 Filippo Brumelleschi</h3>
+            <p>文艺复兴时期建筑的奠基人。</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E8%8F%B2%E5%88%A9%E6%B3%A2%C2%B7%E5%B8%83%E9%B2%81%E5%86%85%E8%8E%B1%E6%96%AF%E5%9F%BA%20Filippo%20Brumelleschi%201377-1446:%5B%5B%E8%8F%B2%E5%88%A9%E6%B3%A2%C2%B7%E5%B8%83%E9%B2%81%E5%86%85%E8%8E%B1%E6%96%AF%E5%9F%BA%20Filippo%20Brumelleschi%201377-1446%5D%5D">Read more</a></span>
+        </div>
       </div>
       <!-- // Article -->
 
