--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -371,17 +371,17 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="century">317 AD</div>
-          <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>A.D. 317 - 420 东晋</h3>
+        <div class="content-right-container">
+          <div class="century">313 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 313 罗马帝国皇帝君士坦丁大帝信奉基督教</h3>
+            <p>313年颁布《米兰赦令》，宣布罗马帝国境内有信仰基督教的自由，并且发还了已经没收的教会财产，亦承认了基督教的合法地位。米兰敕令是基督教历史上的转折点，标志著罗马帝国的统治者对基督教从镇压和宽容相结合的政策转为保护和利用的政策、从被戴克里先迫害的地下宗教成为被承认的宗教，而基督教也开始了与帝国政府的政教合一。</p>
           </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
-        </div>
-        <div class="meta-date">
-          <span class="date">400</span>
-          <span class="month">AD</span>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E5%A4%A7%E5%B8%9D%2F%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E4%B8%80%E4%B8%96%20Constantine%20the%20Great:%5B%5B%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E5%A4%A7%E5%B8%9D%2F%E5%90%9B%E5%A3%AB%E5%9D%A6%E4%B8%81%E4%B8%80%E4%B8%96%20Constantine%20the%20Great%5D%5D">Read more</a>
+          </span>
         </div>
         <div class="meta-date">
           <span class="date">300</span>
@@ -403,6 +403,21 @@
 
       </div>
       <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">380 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 380 基督教确立为罗马帝国国教</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+
+      </div>
+      <!-- // Article -->
+
 
       <!-- Article -->
       <div class="timeline-article">
