--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -910,7 +910,7 @@
           <div class="century">1267 AD</div>
           <div class="content-left">
             <h4 class="area">Europe</h4>
-            <h3>A.D. 1267 - 1337 乔托</h3>
+            <h3>A.D. 1267 - 1337 乔托 Giotto</h3>
             <p>意大利文艺复兴时期的开创者, 欧洲绘画之父、西方绘画之父。被认为是第一个企图画出有透视感和深度空间的画家。</p>
           </div>
           <span class="timeline-author">
@@ -1006,7 +1006,7 @@
           <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1377 - 1446 菲利波·布鲁内莱斯基 Filippo Brumelleschi</h3>
-            <p>文艺复兴时期建筑的奠基人。</p>
+            <p>文艺复兴时期建筑的奠基人; 线性透视法发现者</p>
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
@@ -1061,6 +1061,18 @@
       </div>
       <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1452 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1452 - 1519 列奥纳多·达·芬奇 Leonardo da Vinci</h3>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
 
       <!-- Article -->
       <div class="timeline-article">
@@ -1069,7 +1081,34 @@
           <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1455 古登堡印刷版《圣经》出版</h3>
-            <p>加快了知识流通和欧洲人的识字率，推动了文艺复兴。</p>
+            <p>加快了知识流通和欧洲人的识字率，在随后兴起的欧洲文艺复兴、宗教改革、启蒙时代和科学革命等运动中都扮演了重要角色，为现代知识经济和知识传播奠定物质性的基础。</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/MedievalEurope/8kuNoteBook_MedievalEurope.html#%E5%8F%A4%E7%99%BB%E5%A0%A1%E5%8D%B0%E5%88%B7%E7%89%88%E3%80%8A%E5%9C%A3%E7%BB%8F%E3%80%8B%E5%87%BA%E7%89%88%201455:%5B%5B%E5%8F%A4%E7%99%BB%E5%A0%A1%E5%8D%B0%E5%88%B7%E7%89%88%E3%80%8A%E5%9C%A3%E7%BB%8F%E3%80%8B%E5%87%BA%E7%89%88%201455%5D%5D">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1475 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1475 - 1564 米开朗基罗 Michelangelo</h3>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1483 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1483 - 1520 拉斐尔 Raphael</h3>
           </div>
         </div>
       </div>
@@ -1089,6 +1128,42 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1506 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1506 - 1626 圣彼得大教堂开始修建</h3>
+            <p>用于资助建造旧伯多禄大殿的一种方法是给予赎罪券以换取捐款， 糜费了大量钱财，使得教皇在筹集足够的资金时，加速了危机的到来，最后引起了<b>宗教改革运动</b>。</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9:%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9">Read more</a></span>
+        </div>
+        <div class="meta-date">
+          <span class="date">1500</span>
+          <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1517 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1517 宗教改革开始</h3>
+            <p>1517年，路德发表的《九十五条论纲》引发了宗教改革的开始，即德意志宗教改革。</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9:%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">1543 AD</div>
           <div class="content-right">
@@ -1098,10 +1173,6 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%A7%91%E5%AD%A6%E9%9D%A9%E5%91%BD%20Scientific%20revolution:%5B%5B%E7%A7%91%E5%AD%A6%E9%9D%A9%E5%91%BD%20Scientific%20revolution%5D%5D">Read more</a></span>
-        </div>
-        <div class="meta-date">
-          <span class="date">1500</span>
-          <span class="month">AD</span>
         </div>
       </div>
       <!-- // Article -->
