--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -1198,6 +1198,27 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">1600 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1600 - 1750 巴洛克艺术时期</h3>
+          </div>
+          <!-- <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War:%5B%5B%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War%5D%5D">Read more</a></span> -->
+        </div>
+
+        <div class="meta-date">
+          <span class="date">1600</span>
+          <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">1618 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
@@ -1371,24 +1392,23 @@
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
-
-        <div class="content-right-container">
-          <div class="century">1914 AD</div>
-          <div class="content-right">
-            <h4 class="area">Europe</h4>
-            <h3>A.D. 1914 - 1918 第一次世界大战 World War I</h3>
-          </div>
-          <span class="timeline-author">
-            <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I:%5B%5B%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I%5D%5D">Read more</a></span>
-        </div>
-
-        <div class="meta-date">
-          <span class="date">1900</span>
-          <span class="month">AD</span>
-        </div>
       </div>
-      <!-- // Article -->      
+      <!-- // Article -->    
+      
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1914 AD</div>
+        <div class="content-right">
+          <h4 class="area">Europe</h4>
+          <h3>A.D. 1914 - 1918 第一次世界大战 World War I</h3>
+        </div>
+        <span class="timeline-author">
+          <i class="material-symbols-outlined">travel_explore</i>
+          <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I:%5B%5B%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I%5D%5D">Read more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->   
 
       <!-- Article -->
       <div class="timeline-article">
