finish reading art history

--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -1037,10 +1037,9 @@
           <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>1400 - 1600 文艺复兴</h3>
+            <p><a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance:%5B%5B%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance%5D%5D">欧洲近代史</a></p>
+            <p><a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance:%5B%5B%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance%5D%5D">艺术史</a></p>
           </div>
-          <span class="timeline-author">
-            <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance:%5B%5B%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%20Renaissance%5D%5D">Read more</a></span>
         </div>
         <div class="meta-date">
           <span class="date">1400</span>
@@ -1197,15 +1196,18 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-right-container">
+        <div class="content-left-container">
           <div class="century">1600 AD</div>
-          <div class="content-right">
+          <div class="content-left">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1600 - 1750 巴洛克艺术时期</h3>
+            <p><b>早期巴洛克</b>：1548-1625</p>
+            <p><b>盛期巴洛克</b>：1625-1675</p>
+            <p><b>晚期巴洛克/洛可可</b>：1675-1750</p>
           </div>
-          <!-- <span class="timeline-author">
+          <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War:%5B%5B%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War%5D%5D">Read more</a></span> -->
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E5%B7%B4%E6%B4%9B%E5%85%8B%E8%89%BA%E6%9C%AF%20Baroque%20c.1600-c.1750:%5B%5B%E5%B7%B4%E6%B4%9B%E5%85%8B%E8%89%BA%E6%9C%AF%20Baroque%20c.1600-c.1750%5D%5D">Read more</a></span>
         </div>
 
         <div class="meta-date">
@@ -1214,7 +1216,6 @@
         </div>
       </div>
       <!-- // Article -->
-
 
       <!-- Article -->
       <div class="timeline-article">
@@ -1259,6 +1260,22 @@
             <h4 class="area">Europe</h4>
             <h3>A.D. 1688 - 1689 光荣革命</h3>
             <p>这场政变以不流血著名, 诞生了 1689年权利法案, 是英国君主立宪制形成的重要事件。</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%85%89%E8%8D%A3%E9%9D%A9%E5%91%BD%20Glorious%20Revolution:%5B%5B%E5%85%89%E8%8D%A3%E9%9D%A9%E5%91%BD%20Glorious%20Revolution%5D%5D">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1740 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1740 - 1890 哥特复兴建筑时期</h3>
+            <p>修建了英国国会大厦和大本钟</p>
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
@@ -1335,6 +1352,22 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">1826 AD</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1826 法国人尼埃普斯在1826年拍摄了世界上第一张照片</h3>
+          </div>
+        </div>
+        <div class="meta-date">
+          <span class="date">1800</span>
+          <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">1837 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
@@ -1343,10 +1376,6 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%BB%B4%E5%A4%9A%E5%88%A9%E4%BA%9A%E6%97%B6%E6%9C%9F%20Victorian%20era:%5B%5B%E7%BB%B4%E5%A4%9A%E5%88%A9%E4%BA%9A%E6%97%B6%E6%9C%9F%20Victorian%20era%5D%5D">Read more</a></span>
-        </div>
-        <div class="meta-date">
-          <span class="date">1800</span>
-          <span class="month">AD</span>
         </div>
       </div>
       <!-- // Article -->
@@ -1364,6 +1393,18 @@
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%B8%80%E6%AC%A1%E9%B8%A6%E7%89%87%E6%88%98%E4%BA%89%20First%20Opium%20War:%5B%5B%E7%AC%AC%E4%B8%80%E6%AC%A1%E9%B8%A6%E7%89%87%E6%88%98%E4%BA%89%20First%20Opium%20War%5D%5D">Read more</a></span>
         </div>
 
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1860 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1860 印象派</h3>
+          </div>
+        </div>
       </div>
       <!-- // Article -->
 
