--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -944,6 +944,7 @@
           <div class="content-right">
             <h4 class="area">Europe</h4>
             <h3>A.D. 1492 哥伦布发现美洲</h3>
+            <p><b>标志中世纪结束，近代开始。</b></p>
           </div>
         </div>
       </div>
