start reading Bible

--- a/ArtHistoryTimeline/art_history_timeline.html
+++ b/ArtHistoryTimeline/art_history_timeline.html
@@ -1219,6 +1219,22 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1603 AD</div>
+          <div class="content-left">
+            <h4 class="area">Europe</h4>
+            <h3>A.D. 1603 - 1867 日本江户时代</h3>
+            <p>葛饰北斋的浮世绘对印象派产生巨大影响</p>
+          </div>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">travel_explore</i>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E8%91%9B%E9%A5%B0%E5%8C%97%E6%96%8B%20Hokusai%201760%E2%80%931849:%5B%5B%E8%91%9B%E9%A5%B0%E5%8C%97%E6%96%8B%20Hokusai%201760%E2%80%931849%5D%5D%20%5B%5B%E6%B1%9F%E6%88%B7%E6%97%B6%E4%BB%A3%20Edo%20period%201603-1867%5D%5D%20Introduce">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">1618 AD</div>
           <div class="content-right">
@@ -1229,11 +1245,6 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War:%5B%5B%E4%B8%89%E5%8D%81%E5%B9%B4%E6%88%98%E4%BA%89%20Thirty%20Years'%20War%5D%5D">Read more</a></span>
-        </div>
-
-        <div class="meta-date">
-          <span class="date">1600</span>
-          <span class="month">AD</span>
         </div>
       </div>
       <!-- // Article -->
@@ -1279,7 +1290,7 @@
           </div>
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
-            <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%85%89%E8%8D%A3%E9%9D%A9%E5%91%BD%20Glorious%20Revolution:%5B%5B%E5%85%89%E8%8D%A3%E9%9D%A9%E5%91%BD%20Glorious%20Revolution%5D%5D">Read more</a></span>
+            <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E5%93%A5%E7%89%B9%E5%A4%8D%E5%85%B4%E5%BB%BA%E7%AD%91%20Gothic%20Revival%20architecture%201740-1890:%5B%5B%E5%93%A5%E7%89%B9%E5%A4%8D%E5%85%B4%E5%BB%BA%E7%AD%91%20Gothic%20Revival%20architecture%201740-1890%5D%5D">Read more</a></span>
         </div>
       </div>
       <!-- // Article -->
@@ -1447,6 +1458,21 @@
         <span class="timeline-author">
           <i class="material-symbols-outlined">travel_explore</i>
           <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I:%5B%5B%E7%AC%AC%E4%B8%80%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20I%5D%5D">Read more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->   
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1916 AD</div>
+        <div class="content-left">
+          <h4 class="area">Europe</h4>
+          <h3>A.D. 1916 - 1920s 达达主义</h3>
+        </div>
+        <span class="timeline-author">
+          <i class="material-symbols-outlined">travel_explore</i>
+          <a href="https://www.bakumatata.com/notes/Art_Painting/8kuNoteBook_Painting.html#%E8%BE%BE%E8%BE%BE%E4%B8%BB%E4%B9%89%20Dada%201916-1920s:%5B%5B%E8%BE%BE%E8%BE%BE%E4%B8%BB%E4%B9%89%20Dada%201916-1920s%5D%5D">Read more</a></span>
       </div>
     </div>
     <!-- // Article -->   
