--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <div>
             <h2>心理学</h2>
             <ul>
+            <li><a href="Psychology/Psychology.html">心理学与生活</a></li>
             <li><a href="EvolutionaryPsychology/index.html">进化心理学</a></li>
             <li><a href="AbnormalPsychology/index.html">变态心理学</a></li>
             <li><a href="HowToThinkStraightAboutPsychology/index.html">对伪心理学说不</a></li>
