fix link of history map

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <a href="HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html">日本史</a>
                     </li>
                     <li>
-                        <a href="worldHistoryMap/index.html">世界历史地图</a>
+                        <a href="https://www.bakumatata.com/worldHistoryMap/index.html">世界历史地图</a>
                     </li>
                     <li>
                         <a href="HistoryTimeline/history_timeline.html">历史时间线</a>
