--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -107,6 +107,7 @@
           <div class="content-left">
             <h4 class="area">China</h4>
             <h3>1700 B.C. - 1027 B.C. 商</h3>
+            <p>殷商末期，汉字开始被使用</p>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -166,6 +167,25 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">500 BC</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>500 B.C. 金属货币出现</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+
+          <div class="meta-date">
+            <span class="date">500</span>
+            <span class="month">BC</span>
+          </div>
+        </div>
+
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">400 BC</div>
           <div class="content-right">
@@ -194,6 +214,7 @@
           <div class="content-left">
             <h4 class="area">China</h4>
             <h3>475/403 B.C. - 221 B.C. 战国时期</h3>
+            <p>开始采行文书行政制度，汉字被广泛传播</p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
