--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -135,6 +135,24 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">776 BC</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>776 B.C. 雅典举办第一次奥林匹克运动会</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">760</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-left-container">
           <div class="century">770 BC</div>
           <div class="content-left">
