--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -286,6 +286,35 @@
       </div>
       <!-- // Article -->
 
+            <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">206 BC</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>206 B.C. 出现指南针用于占卜的纪录</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+            <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">104 BC</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>104 B.C. 开始使用<b>太初历</b>作为历法</h3>
+            <p>（汉武帝后期）每年以1月为初</p>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
